--- a/news/static/css/custom.css
+++ b/news/static/css/custom.css
@@ -1,19 +1,31 @@
+.login{
+    color: white;
+    float: right;
+    margin-top: 10px;
+    padding-right: 20px;
 
-#homeBody{
-    background-color: grey;
-    background: url(../img/home_background2.jpg) no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
 }
 
+#intro-header{
+    background: url(../img/home_background2.jpg) no-repeat center center;
+	padding-bottom: 50px;
+	background-size: cover;
+	text-align: center;
+}
+
+#intro-header-login{
+    background: url(../img/login_background.jpg) no-repeat center center;
+	padding-bottom: 50px;
+	/*background-size: cover;*/
+	text-align: center;
+    padding: 50px 50px 50px 50px;
+}
 
 #home-header{
     display: block;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 20px;
+    margin-top: 10px;
     padding: 20px 0 0 20px;
     text-align: center;
     font-family: Ubuntu;
@@ -25,24 +37,84 @@
     display: block;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 20px;
-    margin-bottom: -20px;
+    margin-top: 10px;
+    margin-bottom: -30px;
     text-align: center;
     font-family: Ubuntu;
     font-size: 30px;
     color: white;
 }
 
-.news-read-more{
-    margin-top: -30px;
+.intro-message{
+    padding-top: 40px;
+    text-align: center;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.intro-box{
+    /*border: 2px solid #eee;*/
+    margin: 40px;
+}
+
+hr{
+    border-top: 2px solid #eee;
+}
+
+#featurette-divider{
+    margin: 80px 0;
+}
+
+.news-more-options{
+    /*margin-top: -30px;*/
     margin-right: 10px;
     float: right;
+    font-size: 12px;
+    color: white;
+    font-style: italic;
+}
+
+#favorite-icon-news{
+    float: right;
+    width: 15px;
+    height: 15px;
+}
+
+#favorite-icon-entertainment{
+    float: left;
+    width: 20px;
+    height: 20px;
+}
+
+#favorite-icon-news-saved{
+    float: right;
+    width: 15px;
+    height: 15px;
+}
+
+#favorite-icon-entertainment-saved{
+    float: right;
+    width: 15px;
+    height: 15px;
+}
+
+#twitter-search-bar{
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #sourceLogo{
     width: 20%;
     height: 20%;
-    float: right;
-    margin-right: 15px;
+    /*float: right;*/
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 10px;
+    margin-bottom: -50px;
+}
+
+#random-comic{
+    margin-left: 20px;
 }
