--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -41,36 +41,69 @@
         <title></title>
     </head>
 
-    <body id="homeBody">
-        <h1 id="home-header"> all. &nbsp; about. &nbsp; you.</h1>
-        <h3 id="home-subheader"> All your favorite websites in one place. Unlock yourself.</h3>
-        <div class="container">
-            <div class="row">
+    <body>
 
-                <div class="col-md-4 col-md-offset-4">
-                    <div class="login-panel panel panel-default">
-                        <div class="panel-heading">
-                {% block content %}
-                            <h3 class="panel-title"> Register Now</h3>
-                        </div>
-                        <div class="panel-body">
-                            <form method="post">
-                                {% csrf_token %}
-                                {% for field in register_form %}
+    {% block content %}
+
+        <div id="intro-header">
+        <div class="login"> Already a member? <a href="{% url "login" %}">Log In</a>
+        </div><br>
+        <h1 id="home-header"> all. &nbsp; about. &nbsp; you.</h1>
+            <h3 id="home-subheader"> All your favorite websites in one place. Unlock yourself.</h3>
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-md-4 col-md-offset-4">
+                        <div class="login-panel panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"> Register Now</h3>
+                            </div>
+                            <div class="panel-body">
+                                <form method="post">
+                                    {% csrf_token %}
+                                    {% for field in register_form %}
                                     <div class="form-group">
                                         {{ field }}
                                         {{ field.error }}
                                     </div>
-                                {% endfor %}
-                                <input type="submit" value="Register" name="register" class="btn btn-lg btn-success btn-block">
-                            </form>
+                                    {% endfor %}
+                                    <input type="submit" value="Register" name="register" class="btn btn-lg btn-success btn-block">
+                                </form>
+                            </div>
                         </div>
                     </div>
-                    <div style="color: white"> Already a member? <a href="{% url "login" %}">Log In</a></div>
-                {% endblock %}
-             </div>
+                </div>
             </div>
-        </div>
+    </div>
+
+    <!-- Three columns of text below the carousel -->
+    <div class="intro-message">
+          <div class="row">
+            <div class="intro-box col-lg-3">
+              <img class="img-circle" src="{% static "img/one_website.jpg" %}" style="width: 140px; height: 140px;">
+              <h2>One website</h2>
+              <p>All your favorite websites with your favorite content located on a single site. You pick the websites you choose and we take care of the rest.</p>
+            </div><!-- /.col-lg-4 -->
+            <div class="intro-box col-lg-3">
+              <img class="img-circle" src="{% static "img/very_customized.jpg" %}" style="width: 140px; height: 140px;">
+              <h2>Very customized</h2>
+              <p>You decide what goes where, how much you want to share and with whom. This is your portal and you can make it all you want it to be.</p>
+            </div><!-- /.col-lg-4 -->
+            <div class="intro-box col-lg-3">
+              <img class="img-circle" src="{% static "img/free_time.jpg" %}" style="width: 140px; height: 140px;">
+              <h2>More free time</h2>
+              <p>So now there's no more logging into multiple websites. That's a whole lot more of free time for you!</p>
+            </div><!-- /.col-lg-4 -->
+          </div><!-- /.row -->
+
+         <hr id="featurette-divider">
+
+         <footer>
+            <p>&copy; 2014 All. About. Me. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+          </footer>
+
+     </div>
+     {% endblock %}
 
 
         <!-- jQuery Version 1.11.0 -->
