--- a/news/templates/preferences.html
+++ b/news/templates/preferences.html
@@ -5,13 +5,13 @@
     <div id="page-wrapper">
         <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header panel-heading">  <span> <img src="{% static "img/profile.jpeg" %}" style="width: 40px; height: 40px;"/></span> Profile</h1>
+                    <h1 class="page-header panel-heading">  <span> <img src="{% static "img/preferences.jpeg" %}" style="width: 40px; height: 40px;"/></span> Preferences</h1>
 
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    Update your profile here
+                                    What websites do you follow? Select them here.
                                 </div>
                                 <div class="panel-body">
                                     <div class="row">
@@ -26,7 +26,7 @@
                                                             {{ form.as_p }}
                                                         </div>
                                                     </div>
-                                                    <input type="submit" class="btn btn-success" value="Update" name="Preferences">
+                                                    <input type="submit" class="btn btn-success" value="Save" name="Preferences">
                                                 </form>
                                             </div>
                                         </div>
