--- a/news/templates/registration/login.html
+++ b/news/templates/registration/login.html
@@ -2,17 +2,31 @@
 
 {% block content %}
 
-                <h3 class="panel-title"> Log In</h3>
-            </div>
-            <div class="panel-body">
-                <form method = 'POST' style="width: 250px">
-                    {% csrf_token %}
-                    {{  form.as_p }}
-                    <input type="submit" value="Log In" name="login" class="btn btn-lg btn-primary btn-block">
-                </form>
-            </div>
-        </div>
+    <div id="intro-header-login">
+        <div class="login"> Not a member? <a href="{% url "home" %}">Sign Up Now</a>
+        </div><br>
+        <h1 id="home-header"> This. is. it.</h1>
+{#            <h3 id="home-subheader"> All your favorite websites in one place. Unlock yourself.</h3>#}
+            <div class="container">
+                <div class="row">
 
-        <div style="color: white; font: 35px;"> Not a member yet? <a href="{% url "home" %}">Sign up now</a></div>
+                    <div class="col-md-4 col-md-offset-4">
+                        <div class="login-panel panel panel-default">
+                            <div class="panel-heading">
+                                <h3 class="panel-title"> Log In</h3>
+                            </div>
+                            <div class="panel-body">
+                                <form method = 'POST' style="width: 250px">
+                                    {% csrf_token %}
+                                    {{  form.as_p }}
+                                    <input type="submit" value="Log In" name="login" class="btn btn-lg btn-primary btn-block">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+             </div>
+        <div style="height: 200px;"></div>
+    </div>
 
 {% endblock %}
